// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkAnimateHeight should render correctly collapsed 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "borderRadius": 0,
      "height": 0.01,
      "overflow": "hidden",
    }
  }
>
  <View
    collapsable={false}
    style={
      Array [
        null,
        Object {
          "left": 0,
          "opacity": 0,
          "position": "absolute",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
          },
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
  <View
    style={
      Array [
        null,
        Object {
          "height": null,
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
          },
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
</View>
`;

exports[`iOS BpkAnimateHeight should render correctly expanded 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "borderRadius": 0,
      "height": null,
      "overflow": "hidden",
    }
  }
>
  <View
    collapsable={false}
    style={
      Array [
        null,
        Object {
          "left": 0,
          "opacity": 0,
          "position": "absolute",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
          },
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
  <View
    style={
      Array [
        null,
        Object {
          "height": null,
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
          },
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
</View>
`;

exports[`iOS BpkAnimateHeight should render correctly with n children 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "borderRadius": 0,
      "height": null,
      "overflow": "hidden",
    }
  }
>
  <View
    collapsable={false}
    style={
      Array [
        null,
        Object {
          "left": 0,
          "opacity": 0,
          "position": "absolute",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
          },
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
          },
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
  <View
    style={
      Array [
        null,
        Object {
          "height": null,
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
          },
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
          },
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
</View>
`;

exports[`iOS BpkAnimateHeight should render correctly with user styling padding 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "borderRadius": 0,
      "height": null,
      "marginBottom": 4,
      "overflow": "hidden",
    }
  }
>
  <View
    collapsable={false}
    style={
      Array [
        null,
        Object {
          "left": 0,
          "opacity": 0,
          "position": "absolute",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
          },
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
  <View
    style={
      Array [
        null,
        Object {
          "height": null,
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
          },
        ]
      }
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </Text>
  </View>
</View>
`;
